// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInput Should not return Enhanced Input when isVisible is false 1`] = `<DocumentFragment />`;

exports[`withInput Should return Enhanced Input when withInput have been called with default className and input component 1`] = `
<DocumentFragment>
  <p>
    default
  </p>
  <p />
  <input
    id="name"
    name="name"
    type="text"
  />
</DocumentFragment>
`;

exports[`withInput Should return Enhanced Input when withInput have been called with default className and input component and modifier 1`] = `
<DocumentFragment>
  <p>
    default default--custom
  </p>
  <p>
    custom
  </p>
  <input
    id="name"
    name="name"
    type="text"
  />
</DocumentFragment>
`;
